--- a/style.css
+++ b/style.css
@@ -13,3 +13,19 @@ h1{
 li{
     margin-top: 5px;
 }
+#pictureContainer{
+    display:flex;
+    flex-direction:column;
+    height: 1500px;
+    width: 400px;
+  
+}
+#pictureContainer2{
+    display:flex;
+    flex-direction:column;
+    height: 1500px;
+    width: 400px;
+    margin-left:40%;
+    justify-content: space-between;
+}
+
